# rl_mini_projects

./: .gitignore  pyproject.toml
examples/: monte_carlo_value_convergence.py
examples/finite_markov_1/: 2d_grid.py
examples/gamblers_remorse/: environment.py
examples/reactor/: agent.py  environment.py  monte_carlo.py  run_mc.py
models/: components.py  finite_markov.py  processes.py
