[project]
name = "rl-mini-projects"
version = "0.1.0"
description = ""
authors = [
    {name = "jbaremoney",email = "114310093+jbaremoney@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
